cambio para fechas de la completa compra

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <nav class="navbar">
             <div class="container navbar-content">
-                <a href="index.html" class="logo">
-                    <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul">
-                </a>
+            <a href="index.html" class="logo">
+            <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul">
+        </a>
                 <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
                     <span class="toggler-icon"></span>
                     <span class="toggler-icon"></span>
@@ -31,7 +31,7 @@
                         <li><a href="faq.html" class="nav-link">Preguntas</a></li>
                     </ul>
                     <div class="navbar-right-items">
-                        <div class="navbar-user-actions" id="navbarUserActions">
+                    <div class="navbar-user-actions" id="navbarUserActions">
                             <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
                             <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
                             <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión"><i class="fas fa-sign-out-alt"></i></button>
@@ -64,7 +64,7 @@
         <section class="section features-section">
             <div class="container">
                 <div class="section-title">
-                    <h2>¿Por qué elegir <span class="highlight-sostenible">EcoBox</span>?</h2>
+                    <h2>¿Por qué elegir <span class="highlight-sostenible">GreenHaul</span>?</h2>
                     <p>Descubre los beneficios de una mudanza inteligente y respetuosa con el medio ambiente.</p>
                 </div>
                 <div class="features-grid">
@@ -91,7 +91,8 @@
             </div>
         </section>
         
-        
+        <!-- SECCIÓN CALCULADORA ELIMINADA -->
+
         <section class="section about-intro-section">
             <div class="container">
                 <div class="section-title"><h2>Nuestra <span class="highlight-sostenible">Misión</span></h2></div>
@@ -145,11 +146,6 @@
             </div>
             <div class="cart-modal-body" id="cartItemsContainer"></div>
             <div class="cart-modal-footer">
-                <div class="cart-rental-dates" style="display: none;">
-                    <p>Fechas de alquiler:</p>
-                    <p>Entrega: <span id="cartStartDate"></span></p>
-                    <p>Recolección: <span id="cartEndDate"></span></p>
-                </div>
                 <div class="cart-summary">
                     <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
                     <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
