--- a/confirmacion-entrega-recoleccion.html
+++ b/confirmacion-entrega-recoleccion.html
@@ -264,10 +264,18 @@
         </div>
     </footer>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const yearSpan = document.getElementById('current-year');
-            if (yearSpan) yearSpan.textContent = new Date().getFullYear();
-        });
+        // Función de notificación reutilizable
+        function showNotification(msg, type) {
+            const cartNotification = document.getElementById('cartNotification');
+            const notificationText = document.getElementById('notificationText');
+            notificationText.textContent = msg;
+            cartNotification.classList.remove('show', 'error', 'success', 'info');
+            if (type) cartNotification.classList.add(type);
+            cartNotification.classList.add('show');
+            setTimeout(() => {
+                cartNotification.classList.remove('show');
+            }, 3500);
+        }
     </script>
     <div class="cart-notification" id="cartNotification">
         <div class="notification-content">
@@ -279,6 +287,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
     <script>
     document.addEventListener('DOMContentLoaded', () => {
+        // ------------- SECCIÓN DE VARIABLES E INICIALIZACIÓN -------------
         // Inputs de dirección de entrega
         const deliveryAddressStreetInput = document.getElementById('deliveryAddressStreet');
         const deliveryAddressNeighborhoodInput = document.getElementById('deliveryAddressNeighborhood');
@@ -304,11 +313,10 @@
         const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
         let deliveryMap, deliveryMarker;
         let pickupMap, pickupMarker;
-
-        // Variables para guardar los IDs de las direcciones seleccionadas
         let deliveryAddressId = null;
         let pickupAddressId = null;
 
+        // ------------- FUNCIONES AUXILIARES -------------
         function escapeRegExp(string) {
             return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
         }
@@ -391,6 +399,8 @@
                 showNotification('Error de conexión al servicio de geocodificación.', 'error');
             }
         }
+
+        // ------------- MAPAS Y EVENTOS DE CAMPOS -------------
         const deliveryInputElements = {
             street: deliveryAddressStreetInput,
             neighborhood: deliveryAddressNeighborhoodInput,
@@ -428,7 +438,7 @@
             input.addEventListener('keydown', (e) => { if (e.key === 'Enter') { e.preventDefault(); geocodeAddress(pickupInputElements, pickupMap, pickupMarker); } });
         });
 
-        // Mostrar fechas aunque no exista totalDays
+        // ------------- FECHAS DE RENTAL RESUMEN -------------
         const shoppingCart = JSON.parse(localStorage.getItem('shoppingCart')) || {};
         const rentalDatesSummaryEl = document.getElementById('rentalDatesSummary');
         if (shoppingCart.rentalDates && shoppingCart.rentalDates.start && shoppingCart.rentalDates.end) {
@@ -442,6 +452,7 @@
             setTimeout(() => { window.location.href = 'productos.html'; }, 3000);
         }
 
+        // ------------- DIRECCIONES GUARDADAS -------------
         const loggedInUser = JSON.parse(localStorage.getItem('greenhaulUser'));
         if (loggedInUser && loggedInUser.id) {
             document.getElementById('saved-delivery-addresses-container').style.display = 'block';
@@ -458,7 +469,7 @@
                         addresses.forEach(addr => {
                             const fullAddressText = `${addr.name ? addr.name + ' - ' : ''}${addr.street || ''}, ${addr.neighborhood ? addr.neighborhood + ', ' : ''}${addr.city || ''}, ${addr.state || ''} ${addr.postal_code || ''}`;
                             const option = document.createElement('option');
-                            option.value = addr.id; // Usamos SOLO el id
+                            option.value = addr.id;
                             option.textContent = fullAddressText.trim();
                             deliverySelect.appendChild(option.cloneNode(true));
                             pickupSelect.appendChild(option);
@@ -477,7 +488,6 @@
                 const selectedId = e.target.value;
                 if (selectedId) {
                     deliveryAddressId = parseInt(selectedId, 10);
-                    // Busca la dirección seleccionada en la API para rellenar los campos y el mapa
                     fetch(`${backendUrl}/api/addresses/${deliveryAddressId}`)
                         .then(res => res.json())
                         .then(addr => {
@@ -548,56 +558,95 @@
             showNotification('Inicia sesión para usar tus direcciones guardadas.', 'info');
         }
 
-        deliveryAddressForm.addEventListener('submit', (e) => {
+        // ------------- CONFIRMAR DIRECCIÓN DE ENTREGA -------------
+        deliveryAddressForm.addEventListener('submit', async (e) => {
             e.preventDefault();
-            if (!deliveryAddressId) {
-                showNotification('Selecciona una dirección de entrega guardada para continuar.', 'error');
-                isDeliveryAddressConfirmed = false;
+            if (deliveryAddressId) {
+                isDeliveryAddressConfirmed = true;
+                localStorage.setItem('deliveryAddressId', deliveryAddressId);
+                showNotification('Dirección de entrega confirmada.', 'success');
                 return;
             }
-            isDeliveryAddressConfirmed = true;
-            localStorage.setItem('deliveryAddressId', deliveryAddressId);
-            showNotification('Dirección de entrega confirmada.', 'success');
-        });
-        pickupAddressForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            if (!pickupAddressId) {
-                showNotification('Selecciona una dirección de recolección guardada para continuar.', 'error');
-                isPickupAddressConfirmed = false;
-                return;
+            const loggedInUser = JSON.parse(localStorage.getItem('greenhaulUser'));
+            const addressData = {
+                user_id: loggedInUser?.id,
+                street: deliveryAddressStreetInput.value,
+                neighborhood: deliveryAddressNeighborhoodInput.value,
+                city: deliveryAddressCityInput.value,
+                state: deliveryAddressStateInput.value,
+                postal_code: deliveryAddressPostalCodeInput.value,
+                references: deliveryAddressReferencesInput.value,
+                latitude: deliveryMarker.getLatLng().lat,
+                longitude: deliveryMarker.getLatLng().lng
+            };
+            try {
+                const resp = await fetch(`${backendUrl}/api/addresses`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(addressData)
+                });
+                if (!resp.ok) throw new Error('No se pudo crear la dirección');
+                const response = await resp.json();
+                deliveryAddressId = response.id;
+                isDeliveryAddressConfirmed = true;
+                localStorage.setItem('deliveryAddressId', deliveryAddressId);
+                showNotification('Dirección de entrega confirmada.', 'success');
+            } catch (err) {
+                showNotification('Error al guardar la dirección. Intenta de nuevo.', 'error');
             }
-            isPickupAddressConfirmed = true;
-            localStorage.setItem('pickupAddressId', pickupAddressId);
-            showNotification('Dirección de recolección confirmada.', 'success');
         });
 
+        // ------------- CONFIRMAR DIRECCIÓN DE RECOLECCIÓN -------------
+        pickupAddressForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            if (pickupAddressId) {
+                isPickupAddressConfirmed = true;
+                localStorage.setItem('pickupAddressId', pickupAddressId);
+                showNotification('Dirección de recolección confirmada.', 'success');
+                return;
+            }
+            const loggedInUser = JSON.parse(localStorage.getItem('greenhaulUser'));
+            const addressData = {
+                user_id: loggedInUser?.id,
+                street: pickupAddressStreetInput.value,
+                neighborhood: pickupAddressNeighborhoodInput.value,
+                city: pickupAddressCityInput.value,
+                state: pickupAddressStateInput.value,
+                postal_code: pickupAddressPostalCodeInput.value,
+                references: pickupAddressReferencesInput.value,
+                latitude: pickupMarker.getLatLng().lat,
+                longitude: pickupMarker.getLatLng().lng
+            };
+            try {
+                const resp = await fetch(`${backendUrl}/api/addresses`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(addressData)
+                });
+                if (!resp.ok) throw new Error('No se pudo crear la dirección');
+                const response = await resp.json();
+                pickupAddressId = response.id;
+                isPickupAddressConfirmed = true;
+                localStorage.setItem('pickupAddressId', pickupAddressId);
+                showNotification('Dirección de recolección confirmada.', 'success');
+            } catch (err) {
+                showNotification('Error al guardar la dirección. Intenta de nuevo.', 'error');
+            }
+        });
+
+        // ------------- FINALIZAR ORDEN -------------
         finalizeOrderBtn.addEventListener('click', () => {
             if (!isDeliveryAddressConfirmed || !isPickupAddressConfirmed) {
                 showNotification('Por favor, confirma ambas direcciones antes de continuar al pago.', 'error');
                 return;
             }
-            // Guarda fechas y los IDs de dirección en localStorage para uso en pago.html
             const shoppingCart = JSON.parse(localStorage.getItem('shoppingCart')) || {};
             if (shoppingCart.rentalDates && shoppingCart.rentalDates.start && shoppingCart.rentalDates.end) {
                 localStorage.setItem('greenhaulEntrega', shoppingCart.rentalDates.start);
                 localStorage.setItem('greenhaulRecoleccion', shoppingCart.rentalDates.end);
             }
-            // Ya guardamos deliveryAddressId y pickupAddressId en los submit
             window.location.href = 'pago.html';
         });
-
-        // Función simple de notificación
-        window.showNotification = function (msg, type) {
-            const cartNotification = document.getElementById('cartNotification');
-            const notificationText = document.getElementById('notificationText');
-            notificationText.textContent = msg;
-            cartNotification.classList.remove('show', 'error', 'success', 'info');
-            if (type) cartNotification.classList.add(type);
-            cartNotification.classList.add('show');
-            setTimeout(() => {
-                cartNotification.classList.remove('show');
-            }, 3500);
-        };
     });
     </script>
 </body>
