--- a/confirmacion-entrega-recoleccion.html
+++ b/confirmacion-entrega-recoleccion.html
@@ -287,7 +287,6 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
     <script>
     document.addEventListener('DOMContentLoaded', () => {
-        // ------------- SECCIÓN DE VARIABLES E INICIALIZACIÓN -------------
         // Inputs de dirección de entrega
         const deliveryAddressStreetInput = document.getElementById('deliveryAddressStreet');
         const deliveryAddressNeighborhoodInput = document.getElementById('deliveryAddressNeighborhood');
@@ -313,10 +312,11 @@
         const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
         let deliveryMap, deliveryMarker;
         let pickupMap, pickupMarker;
+
+        // Variables para guardar los IDs de las direcciones seleccionadas
         let deliveryAddressId = null;
         let pickupAddressId = null;
 
-        // ------------- FUNCIONES AUXILIARES -------------
         function escapeRegExp(string) {
             return string.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
         }
@@ -399,8 +399,6 @@
                 showNotification('Error de conexión al servicio de geocodificación.', 'error');
             }
         }
-
-        // ------------- MAPAS Y EVENTOS DE CAMPOS -------------
         const deliveryInputElements = {
             street: deliveryAddressStreetInput,
             neighborhood: deliveryAddressNeighborhoodInput,
@@ -438,7 +436,6 @@
             input.addEventListener('keydown', (e) => { if (e.key === 'Enter') { e.preventDefault(); geocodeAddress(pickupInputElements, pickupMap, pickupMarker); } });
         });
 
-        // ------------- FECHAS DE RENTAL RESUMEN -------------
         const shoppingCart = JSON.parse(localStorage.getItem('shoppingCart')) || {};
         const rentalDatesSummaryEl = document.getElementById('rentalDatesSummary');
         if (shoppingCart.rentalDates && shoppingCart.rentalDates.start && shoppingCart.rentalDates.end) {
@@ -452,7 +449,6 @@
             setTimeout(() => { window.location.href = 'productos.html'; }, 3000);
         }
 
-        // ------------- DIRECCIONES GUARDADAS -------------
         const loggedInUser = JSON.parse(localStorage.getItem('greenhaulUser'));
         if (loggedInUser && loggedInUser.id) {
             document.getElementById('saved-delivery-addresses-container').style.display = 'block';
@@ -558,88 +554,110 @@
             showNotification('Inicia sesión para usar tus direcciones guardadas.', 'info');
         }
 
-        // ------------- CONFIRMAR DIRECCIÓN DE ENTREGA -------------
+        // MODIFICACIÓN: Guardar dirección nueva al confirmar si no está seleccionada del select
+        async function saveNewAddress(userId, inputElements) {
+            const address = {
+                user_id: userId,
+                street: inputElements.street.value,
+                neighborhood: inputElements.neighborhood.value,
+                city: inputElements.city.value,
+                state: inputElements.state.value,
+                postal_code: inputElements.postalCode.value,
+                references: inputElements.references.value,
+                // Opcional: puedes intentar obtener del pin lat/lng
+                latitude: null,
+                longitude: null,
+            };
+            // Si tienes el marker y el mapa, puedes asignar las coordenadas:
+            if (inputElements === deliveryInputElements && deliveryMarker) {
+                const ll = deliveryMarker.getLatLng();
+                address.latitude = ll.lat;
+                address.longitude = ll.lng;
+            }
+            if (inputElements === pickupInputElements && pickupMarker) {
+                const ll = pickupMarker.getLatLng();
+                address.latitude = ll.lat;
+                address.longitude = ll.lng;
+            }
+            // Haz POST
+            try {
+                const resp = await fetch(`${backendUrl}/api/addresses`, {
+                    method: 'POST',
+                    headers: {'Content-Type':'application/json'},
+                    body: JSON.stringify(address)
+                });
+                if (!resp.ok) {
+                    let msg = 'Error al guardar la dirección.';
+                    try {
+                        const d = await resp.json();
+                        msg += ' ' + (d.message || JSON.stringify(d));
+                    } catch(e) {}
+                    showNotification(msg, 'error');
+                    return null;
+                }
+                const data = await resp.json();
+                return data.id; // El ID de la dirección creada
+            } catch (err) {
+                showNotification('Error al conectar con el servidor para guardar dirección.', 'error');
+                return null;
+            }
+        }
+
         deliveryAddressForm.addEventListener('submit', async (e) => {
             e.preventDefault();
-            if (deliveryAddressId) {
-                isDeliveryAddressConfirmed = true;
-                localStorage.setItem('deliveryAddressId', deliveryAddressId);
-                showNotification('Dirección de entrega confirmada.', 'success');
+            if (!loggedInUser || !loggedInUser.id) {
+                showNotification('Debes iniciar sesión para guardar una dirección.', 'error');
+                isDeliveryAddressConfirmed = false;
                 return;
             }
-            const loggedInUser = JSON.parse(localStorage.getItem('greenhaulUser'));
-            const addressData = {
-                user_id: loggedInUser?.id,
-                street: deliveryAddressStreetInput.value,
-                neighborhood: deliveryAddressNeighborhoodInput.value,
-                city: deliveryAddressCityInput.value,
-                state: deliveryAddressStateInput.value,
-                postal_code: deliveryAddressPostalCodeInput.value,
-                references: deliveryAddressReferencesInput.value,
-                latitude: deliveryMarker.getLatLng().lat,
-                longitude: deliveryMarker.getLatLng().lng
-            };
-            try {
-                const resp = await fetch(`${backendUrl}/api/addresses`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(addressData)
-                });
-                if (!resp.ok) throw new Error('No se pudo crear la dirección');
-                const response = await resp.json();
-                deliveryAddressId = response.id;
-                isDeliveryAddressConfirmed = true;
+            // Si NO hay dirección seleccionada, guarda una nueva
+            if (!deliveryAddressId) {
+                const newId = await saveNewAddress(loggedInUser.id, deliveryInputElements);
+                if (newId) {
+                    deliveryAddressId = newId;
+                    localStorage.setItem('deliveryAddressId', deliveryAddressId);
+                    showNotification('Dirección de entrega guardada y confirmada.', 'success');
+                    isDeliveryAddressConfirmed = true;
+                } else {
+                    isDeliveryAddressConfirmed = false;
+                }
+            } else {
                 localStorage.setItem('deliveryAddressId', deliveryAddressId);
                 showNotification('Dirección de entrega confirmada.', 'success');
-            } catch (err) {
-                showNotification('Error al guardar la dirección. Intenta de nuevo.', 'error');
+                isDeliveryAddressConfirmed = true;
             }
         });
 
-        // ------------- CONFIRMAR DIRECCIÓN DE RECOLECCIÓN -------------
         pickupAddressForm.addEventListener('submit', async (e) => {
             e.preventDefault();
-            if (pickupAddressId) {
-                isPickupAddressConfirmed = true;
-                localStorage.setItem('pickupAddressId', pickupAddressId);
-                showNotification('Dirección de recolección confirmada.', 'success');
+            if (!loggedInUser || !loggedInUser.id) {
+                showNotification('Debes iniciar sesión para guardar una dirección.', 'error');
+                isPickupAddressConfirmed = false;
                 return;
             }
-            const loggedInUser = JSON.parse(localStorage.getItem('greenhaulUser'));
-            const addressData = {
-                user_id: loggedInUser?.id,
-                street: pickupAddressStreetInput.value,
-                neighborhood: pickupAddressNeighborhoodInput.value,
-                city: pickupAddressCityInput.value,
-                state: pickupAddressStateInput.value,
-                postal_code: pickupAddressPostalCodeInput.value,
-                references: pickupAddressReferencesInput.value,
-                latitude: pickupMarker.getLatLng().lat,
-                longitude: pickupMarker.getLatLng().lng
-            };
-            try {
-                const resp = await fetch(`${backendUrl}/api/addresses`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(addressData)
-                });
-                if (!resp.ok) throw new Error('No se pudo crear la dirección');
-                const response = await resp.json();
-                pickupAddressId = response.id;
-                isPickupAddressConfirmed = true;
+            if (!pickupAddressId) {
+                const newId = await saveNewAddress(loggedInUser.id, pickupInputElements);
+                if (newId) {
+                    pickupAddressId = newId;
+                    localStorage.setItem('pickupAddressId', pickupAddressId);
+                    showNotification('Dirección de recolección guardada y confirmada.', 'success');
+                    isPickupAddressConfirmed = true;
+                } else {
+                    isPickupAddressConfirmed = false;
+                }
+            } else {
                 localStorage.setItem('pickupAddressId', pickupAddressId);
                 showNotification('Dirección de recolección confirmada.', 'success');
-            } catch (err) {
-                showNotification('Error al guardar la dirección. Intenta de nuevo.', 'error');
+                isPickupAddressConfirmed = true;
             }
         });
 
-        // ------------- FINALIZAR ORDEN -------------
         finalizeOrderBtn.addEventListener('click', () => {
             if (!isDeliveryAddressConfirmed || !isPickupAddressConfirmed) {
                 showNotification('Por favor, confirma ambas direcciones antes de continuar al pago.', 'error');
                 return;
             }
+            // Guarda fechas y los IDs de dirección en localStorage para uso en pago.html
             const shoppingCart = JSON.parse(localStorage.getItem('shoppingCart')) || {};
             if (shoppingCart.rentalDates && shoppingCart.rentalDates.start && shoppingCart.rentalDates.end) {
                 localStorage.setItem('greenhaulEntrega', shoppingCart.rentalDates.start);
