--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <style>
-        /* Responsive Section for Contact */
         .contact-page-section {
             padding: 70px 0 40px 0;
             background: #f8f9fa;
@@ -104,7 +103,6 @@
             border: 0;
             display: block;
         }
-        /* Contact Category Cards */
         .contact-options {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -149,6 +147,24 @@
             .contact-info-card {
                 padding: 20px 8px;
             }
+        }
+        /* Mensaje de éxito/error */
+        #contactSuccess, #contactError {
+            display: none;
+            margin-top: 18px;
+            padding: 12px 16px;
+            border-radius: 7px;
+            font-size: 1.09rem;
+        }
+        #contactSuccess {
+            background: #e0f7ea;
+            color: #1b7c4b;
+            border: 1px solid #b2dfdb;
+        }
+        #contactError {
+            background: #fff1f0;
+            color: #c0392b;
+            border: 1px solid #e57373;
         }
     </style>
 </head>
@@ -234,6 +250,8 @@
                                 <textarea id="message" class="form-control" rows="5" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+                            <div id="contactSuccess">¡Mensaje enviado correctamente! Pronto nos pondremos en contacto.</div>
+                            <div id="contactError"></div>
                         </form>
                     </div>
                 </div>
@@ -315,5 +333,60 @@
     </div>
 </div>
 <script src="assets/js/main.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  // --- Envío del formulario de contacto ---
+  const form = document.getElementById('contactForm');
+  const successMsg = document.getElementById('contactSuccess');
+  const errorMsg = document.getElementById('contactError');
+  if (!form) return;
+
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    // Obtén los valores de los campos
+    const full_name = document.getElementById('name').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const message = document.getElementById('message').value.trim();
+
+    // Validación básica
+    if (!full_name || !email || !message) {
+      errorMsg.style.display = 'block';
+      errorMsg.textContent = 'Por favor, llena todos los campos.';
+      successMsg.style.display = 'none';
+      return;
+    }
+
+    // (Opcional) Validar email simple
+    if (!/\S+@\S+\.\S+/.test(email)) {
+      errorMsg.style.display = 'block';
+      errorMsg.textContent = 'Por favor, ingresa un correo válido.';
+      successMsg.style.display = 'none';
+      return;
+    }
+
+    // URL del backend
+    const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
+
+    try {
+      const response = await fetch(`${backendUrl}/api/contact`, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ full_name, email, message })
+      });
+      const result = await response.json();
+      if (!response.ok) throw new Error(result.message || 'Error al enviar mensaje');
+      successMsg.style.display = 'block';
+      errorMsg.style.display = 'none';
+      form.reset();
+      setTimeout(() => { successMsg.style.display = 'none'; }, 5000);
+    } catch (err) {
+      errorMsg.style.display = 'block';
+      errorMsg.textContent = 'Hubo un error al enviar tu mensaje: ' + err.message;
+      successMsg.style.display = 'none';
+    }
+  });
+});
+</script>
 </body>
 </html>
