cambios para funcionamiento total

--- a/contacto.html
+++ b/contacto.html
@@ -172,7 +172,7 @@
             left: 50%;
             bottom: 40px;
             transform: translateX(-50%);
-            background: #4a90e2;
+            background: #00b386;
             color: #fff;
             padding: 16px 36px;
             border-radius: 30px;
